# mailer

./: .gitignore  README.md  pyproject.toml  setup.py
src/mailer_wildfluss/: __init__.py
