[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailer_wildfluss"
version = "0.0.1"
authors = [
  { name="Yakov Wildfluss", email="yakov@wildfluss.com" },
]
description = "Send email which scores 10/10 at mail-tester.com"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wildfluss/mailer"
